--- a/style.css
+++ b/style.css
@@ -2,27 +2,65 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: #f3f5f8;
+    background: #ebecee;
 }
 body{
     min-height: 100vh;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-li, a{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 200;
-    font-size: 12px;
-    color: rgb(77, 74, 74);
-    text-decoration: none;
-    background: #fff;
-}
-header{
-    background: #fff;
+
+
+nav ul{
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    list-style: none;
     align-items: center;
+    justify-content: flex-end;
+    background: white;
 }
-header img{
+
+nav li{
+    height: 50px;
+}
+nav a{
+    height: 100%;
+    text-decoration: none;
+    color: black;
+    padding: 0 30px;
+    display: flex;
+    align-items: center;
+    background: white;
+}
+
+nav li:first-child{
+    margin-right: auto;
+}
+
+
+nav img{
     width: 100px;
+}
+
+.sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index: 999;
+    background-color: #ffffff7c;
+    backdrop-filter: blur(10px); ;
+    box-shadow: -10px 0px 10px rgba(0, 0, 0, 0.1);
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.sidebar li{
+    width: 100%;
+}
+.sidebar a{
+    width: 100%;
 }
 .imgs{
     cursor: pointer;
@@ -30,14 +68,7 @@ header img{
     width: 100%;
 }
 
-.nav-links li{
-    display: inline;
-    padding: 0 20px;
-}
-.nav-links li a{
-    height: 100%;
-    transition: all 0.3s ease 0s;
-}
+
 
 .container{
     padding: 160px;
@@ -88,5 +119,20 @@ header img{
     top: 100%;
     left: 0;
 }
-
+.menuButton{
+    display: none;
+}
+@media(max-width:800px){
+    .hideOnMobile{
+        display: none;
+    }
+    .menuButton{
+        display: block;
+    }
+}
+@media(max-width:400px){
+    .sidebar{
+        width:100%;
+    }
+}
 
